--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vuelayers": "^0.11.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
