--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
     "vuelayers": "^0.11.9"
   },
