--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "consolelog": "^2.1.3",
     "core-js": "^2.6.5",
     "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
+    "vue-resource": "^1.5.1",
     "vuelayers": "^0.11.9"
   },
   "devDependencies": {
